--- a/spoj/CALCULAD/paulo/Makefile
+++ b/spoj/CALCULAD/paulo/Makefile
@@ -1,10 +1,16 @@
 default: diff
 
 diff: run
-	diff main.out in01
+	diff main.out an01
 
 run: main.go
 	./main.go < in01 > main.out
+
+valgrind: main.go
+	valgrind ./main.go < in01
+
+debug: main.go
+	./main.go < in01
 
 main.go: main.cpp
 	g++ -Wall main.cpp -o main.go
