CALCULAD supporting signal numbers
But it didn't pass.
Signed-off-by: Paulo Roberto Urio <paulourio@gmail.com>

--- a/spoj/CALCULAD/paulo/Makefile
+++ b/spoj/CALCULAD/paulo/Makefile
@@ -7,7 +7,7 @@ run: main.go
 	./main.go < in01 > main.out
 
 valgrind: main.go
-	valgrind ./main.go < in01
+	valgrind --leak-check=full ./main.go < in01
 
 debug: main.go
 	./main.go < in01
